--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52808525",
+   "id": "0a892a14",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d5568cc4",
+   "id": "071875ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca9b1ab3",
+   "id": "a88245b6",
    "metadata": {},
    "outputs": [
     {
@@ -96,14 +96,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6074a663",
+   "id": "726119f9",
    "metadata": {},
    "source": [
     "# Modules\n",
     "\n",
     "One of the main things to keep in mind when programming is the DRY (\"don't repeat yourself\") rule:\n",
     "\n",
-    "- If you "
+    "- If you have several lines of code in a row that basically repeat themselves, you can replace them with a `for` loop.\n",
+    "- If you have several lines of code that repeat themselves in various places in your program, then you can replace them with a function.\n",
+    "- If you have several lines of code that repeat themselves across different programs, then you can replace them with a library. A library is a collection of code "
    ]
   }
  ],
