--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a892a14",
+   "id": "f5632591",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "071875ae",
+   "id": "f3e7916c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a88245b6",
+   "id": "090453ee",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726119f9",
+   "id": "d3e752c2",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -105,7 +105,39 @@
     "\n",
     "- If you have several lines of code in a row that basically repeat themselves, you can replace them with a `for` loop.\n",
     "- If you have several lines of code that repeat themselves in various places in your program, then you can replace them with a function.\n",
-    "- If you have several lines of code that repeat themselves across different programs, then you can replace them with a library. A library is a collection of code "
+    "- If you have several lines of code that repeat themselves across different programs, then you can replace them with a library. A library is a collection of code that you can use in numerous programs.\n",
+    "\n",
+    "In Python, we call our libraries \"modules.\" A module is thus:\n",
+    "\n",
+    "1. A collection of code (function and variable definitions) that we can use in numerous programs, and\n",
+    "2. The variable/namespace we use to access those functions and variables in our program."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33a2fc0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# one example of a module is \"random\"\n",
+    "# it contains many functions and data structures for working with random and related data.\n",
+    "\n",
+    "# we can load it into memory using \"import\"\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5ba1d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random is a variable, defined in our program\n",
+    "# we can ask it: what kind of value does it refer to?\n",
+    "\n",
+    "type(random)"
    ]
   }
  ],
