--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5632591",
+   "id": "4e1598ce",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f3e7916c",
+   "id": "2aec0f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "090453ee",
+   "id": "80611c07",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e752c2",
+   "id": "b82d6879",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "33a2fc0c",
+   "id": "01b3b786",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +129,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a5ba1d7b",
+   "execution_count": 4,
+   "id": "00a7dc3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "module"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# random is a variable, defined in our program\n",
     "# we can ask it: what kind of value does it refer to?\n",
     "\n",
     "type(random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2f539cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what does the module provide us with? Functions and data we can use\n",
+    "# to work with random-related things\n",
+    "\n",
+    "# for example, the random.randint function\n",
+    "random.randint(0, 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea2e9aff",
+   "metadata": {},
+   "source": [
+    "# Exercise: Random numbers\n",
+    "\n",
+    "1. `import` the `random` module.\n",
+    "2. "
    ]
   }
  ],
