--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4e1598ce",
+   "id": "e0bdb8fe",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2aec0f84",
+   "id": "3af133c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "80611c07",
+   "id": "f1ab329c",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b82d6879",
+   "id": "b1d0f364",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "01b3b786",
+   "id": "6a312bc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "00a7dc3d",
+   "id": "aadd0e50",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f539cfc",
+   "id": "78ee0e88",
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +178,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2e9aff",
+   "id": "841977e7",
+   "metadata": {},
+   "source": [
+    "# Is `random` a module, or a variable?\n",
+    "\n",
+    "It's both!\n",
+    "\n",
+    "When we say `import random`, we're defining the `random` variable. Like all variables in Python, it refers to a value. In this case, the `random` variable refers to the the module object that we loaded with `import`, which knows itself as `random.`\n",
+    "\n",
+    "We can refer to `random` as a variable, and we can also refer to `random` as a module object, even though technically `random` is a name referring to such an object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f92c3d2",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
     "\n",
     "1. `import` the `random` module.\n",
-    "2. "
+    "2. Set two variables, `x` and `y`, to be random integers from 0 to 1,000.\n",
+    "3. Print `x`, `y`, and their product."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fd1cbfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
