--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0bdb8fe",
+   "id": "5ff8d1cf",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3af133c1",
+   "id": "99e365b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f1ab329c",
+   "id": "fc5a08e4",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d0f364",
+   "id": "da7b312f",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a312bc0",
+   "id": "e7ea4fb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aadd0e50",
+   "id": "8c759e9b",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "78ee0e88",
+   "id": "45837e1e",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841977e7",
+   "id": "c55fbc52",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f92c3d2",
+   "id": "8cf527cd",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -204,8 +204,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5718449",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "378 * 951 = 359478\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "x = random.randint(0, 1000)    # running the \"randint\" function in the \"random\" module\n",
+    "y = random.randint(0, 1000)    # (again) running the \"randint\" function in the \"random\" module\n",
+    "\n",
+    "print(f'{x} * {y} = {x*y}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4fd1cbfb",
+   "id": "113c054c",
    "metadata": {},
    "outputs": [],
    "source": []
