--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ff8d1cf",
+   "id": "70749af4",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99e365b4",
+   "id": "4776b09f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fc5a08e4",
+   "id": "85265f74",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7b312f",
+   "id": "c8731ac7",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7ea4fb5",
+   "id": "38cc0bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c759e9b",
+   "id": "9c9101d7",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "45837e1e",
+   "id": "419967de",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55fbc52",
+   "id": "e3a63dc9",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cf527cd",
+   "id": "8c081bc5",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a5718449",
+   "id": "0b1c0afc",
    "metadata": {},
    "outputs": [
     {
@@ -227,11 +227,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "113c054c",
+   "execution_count": 8,
+   "id": "2eee13c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 840 * 694 = 582960\n",
+      "1: 658 * 344 = 226352\n",
+      "2: 622 * 711 = 442242\n",
+      "3: 213 * 514 = 109482\n",
+      "4: 172 * 973 = 167356\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's do this 5 times\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "for i in range(5):\n",
+    "    x = random.randint(0, 1000)    # running the \"randint\" function in the \"random\" module\n",
+    "    y = random.randint(0, 1000)    # (again) running the \"randint\" function in the \"random\" module\n",
+    "\n",
+    "    print(f'{i}: {x} * {y} = {x*y}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2641d093",
+   "metadata": {},
+   "source": [
+    "When we use `import`, we're basically doing two things:\n",
+    "\n",
+    "1. We're creating a module object in Python, based on the module that we loaded\n",
+    "2. We assign that module object to a variable, usually of the same"
+   ]
   }
  ],
  "metadata": {
