--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70749af4",
+   "id": "0c1af829",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4776b09f",
+   "id": "3c65f056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85265f74",
+   "id": "724a69a0",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8731ac7",
+   "id": "b17d441e",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "38cc0bb2",
+   "id": "9a37b963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c9101d7",
+   "id": "13519193",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "419967de",
+   "id": "0c570eaf",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a63dc9",
+   "id": "41e39594",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c081bc5",
+   "id": "88a7763e",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0b1c0afc",
+   "id": "a8547363",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2eee13c7",
+   "id": "bf03ea46",
    "metadata": {},
    "outputs": [
     {
@@ -257,13 +257,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2641d093",
+   "id": "2cfe019e",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
     "\n",
     "1. We're creating a module object in Python, based on the module that we loaded\n",
-    "2. We assign that module object to a variable, usually of the same"
+    "2. We assign that module object to a variable, usually of the same name as the module we loaded\n",
+    "\n",
+    "If I say `import random`, what is Python loading? Where is it getting that data?\n",
+    "\n",
+    "Also: `import` is *not* a function. So we don't use parentheses for its argument. \n",
+    "\n",
+    "Also: The filename we give to `import` isn't a string. It's the name of the variable we want to define to be a module.\n",
+    "\n",
+    "Where does Python look for the file we load?\n",
+    "\n",
+    "Answer: Python takes the module name and adds `.py`, and then looks on disk for that filename. In this case, Python looked for a file called `random.py`.\n",
+    "\n",
+    "Where does it look? In a number of directories that are defined by `sys.path`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b1dbade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys    "
    ]
   }
  ],
