--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c1af829",
+   "id": "8d178a70",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c65f056",
+   "id": "71dfbe2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "724a69a0",
+   "id": "a76214ae",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17d441e",
+   "id": "9697a688",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a37b963",
+   "id": "5570f79d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "13519193",
+   "id": "e47eb7e0",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0c570eaf",
+   "id": "107617ea",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e39594",
+   "id": "d89657a1",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a7763e",
+   "id": "80c02651",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a8547363",
+   "id": "1696525f",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf03ea46",
+   "id": "c2a81d2f",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cfe019e",
+   "id": "d765235e",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -275,17 +275,49 @@
     "\n",
     "Answer: Python takes the module name and adds `.py`, and then looks on disk for that filename. In this case, Python looked for a file called `random.py`.\n",
     "\n",
-    "Where does it look? In a number of directories that are defined by `sys.path`."
+    "Where does it look? In a number of directories that are defined by `sys.path`.\n",
+    "\n",
+    "The first directory in which we find a module file by the name we're searching for, we load it and stop looking further.  This means that if you have more than one module with the same name, in multiple places on the filesystem, you will get confused and angry!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d8acaa31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/reuven/Courses/Current/OReilly-2022-11Nov-first-steps',\n",
+       " '/usr/local/Cellar/python@3.11/3.11.0/Frameworks/Python.framework/Versions/3.11/lib/python311.zip',\n",
+       " '/usr/local/Cellar/python@3.11/3.11.0/Frameworks/Python.framework/Versions/3.11/lib/python3.11',\n",
+       " '/usr/local/Cellar/python@3.11/3.11.0/Frameworks/Python.framework/Versions/3.11/lib/python3.11/lib-dynload',\n",
+       " '',\n",
+       " '/usr/local/lib/python3.11/site-packages',\n",
+       " '/usr/local/opt/python-tk@3.11/libexec']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys    # sys.path is always available to Python, but if we want to look at it, we need to import\n",
+    "sys.path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b1dbade",
+   "id": "0a42d8ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys    "
+    "# let's find out where random was loaded from\n",
+    "# we can just look at the printed representation of the module -- in Jupyter just type its name\n",
+    "\n"
    ]
   }
  ],
