--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98e9b6bc",
+   "id": "dbe9a929",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3b81b787",
+   "id": "7b18ee27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2bad0555",
+   "id": "96de56b8",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464465ba",
+   "id": "33502f84",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "65a4e1ef",
+   "id": "2467b160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3a2d7398",
+   "id": "72c215b3",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05b5cf80",
+   "id": "c8051ee0",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5fc660",
+   "id": "0abe6b91",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8f1589",
+   "id": "0615a708",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ec8c5715",
+   "id": "1d72410c",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ccd3995f",
+   "id": "c11dfacb",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9dbbdad",
+   "id": "8961c172",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c28e08a5",
+   "id": "99135677",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6336ef46",
+   "id": "143f0451",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a31582",
+   "id": "a43e989a",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5d291733",
+   "id": "0d32ab84",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4df90aad",
+   "id": "eb7d2c98",
    "metadata": {},
    "outputs": [
     {
@@ -389,11 +389,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a379f7c6",
+   "execution_count": 14,
+   "id": "5b641d7a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the solution is to use \"from .. import\" syntax\n",
+    "\n",
+    "from random import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "00d8c53a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randint(0, 100)   # now it works!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b798abd5",
+   "metadata": {},
+   "source": [
+    "# A few things about `from .. import ..`\n",
+    "\n",
+    "1. Instead of defining the module as a global variable, it only defines what we ask for as a global variable.\n",
+    "2. This still loads the entire module into memory. We don't have access to it, because we didn't define a variable that refers to it. But it's in memory, and we save *NO* memory at all from using `from .. import`."
+   ]
   }
  ],
  "metadata": {
