--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54f930e3",
+   "id": "407c09c9",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "152c5810",
+   "id": "97a381fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "db84a4d4",
+   "id": "98ec633b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9329db98",
+   "id": "db6ec1d6",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0095decf",
+   "id": "bee27725",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a6b1639",
+   "id": "0991d72a",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05662cb3",
+   "id": "f70184d9",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a105067",
+   "id": "202498db",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d3bd1c",
+   "id": "1afd0863",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "792a1e61",
+   "id": "1ecd235c",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "41a5df35",
+   "id": "2e5d30b8",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b839a4",
+   "id": "998c6ff6",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "071d75db",
+   "id": "5faeda63",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ff17deb5",
+   "id": "c03152bb",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0abb66d0",
+   "id": "20487d12",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2bbc4c78",
+   "id": "b7676248",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c9866c1c",
+   "id": "9ff4cb9b",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dcb0b195",
+   "id": "ebdb80a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fe6b1b8d",
+   "id": "09d86a4c",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af780f94",
+   "id": "96c56109",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -438,14 +438,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e719ed82",
+   "execution_count": 18,
+   "id": "b6d21058",
    "metadata": {},
    "outputs": [],
    "source": [
     "# what if I want to use the random module, but I don't like its very long name?\n",
     "# answer: I can use import __ as ___\n",
-    "\n"
+    "\n",
+    "# this still loads the entire module, if needed -- and if it's already loaded, we change nothing\n",
+    "# instead of defining a global variable named \"random\", it defines a global variable named \"ra\"\n",
+    "\n",
+    "# import as -- lets us give an alias to a module\n",
+    "\n",
+    "# why do this?\n",
+    "# (1) convention\n",
+    "# (2) namespace collision -- maybe the name was taken by someone else\n",
+    "# (3) it's shorter and easier to write\n",
+    "\n",
+    "import random as ra   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0a5327e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'random' from '/usr/local/Cellar/python@3.11/3.11.0/Frameworks/Python.framework/Versions/3.11/lib/python3.11/random.py'>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a366687b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I can also give an alias when I use \"from .. import\"\n",
+    "\n",
+    "from random import randint as ri   "
    ]
   }
  ],
