--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "407c09c9",
+   "id": "75c1cb87",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "97a381fd",
+   "id": "5244f43a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98ec633b",
+   "id": "3548f2b4",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6ec1d6",
+   "id": "2c871687",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bee27725",
+   "id": "1841b7eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0991d72a",
+   "id": "1f6f4db3",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f70184d9",
+   "id": "b1b309a8",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202498db",
+   "id": "22479c5e",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1afd0863",
+   "id": "37b8f84c",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1ecd235c",
+   "id": "1af977dc",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2e5d30b8",
+   "id": "4e633191",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998c6ff6",
+   "id": "4d8fefd3",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5faeda63",
+   "id": "f289d26c",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c03152bb",
+   "id": "d46d1cef",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20487d12",
+   "id": "4c39a466",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7676248",
+   "id": "b2b37049",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9ff4cb9b",
+   "id": "f4add6cd",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ebdb80a7",
+   "id": "1d02845c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "09d86a4c",
+   "id": "e1a2e44f",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c56109",
+   "id": "6750780d",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b6d21058",
+   "id": "0fb52ff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0a5327e1",
+   "id": "8d4f71f8",
    "metadata": {},
    "outputs": [
     {
@@ -482,14 +482,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a366687b",
+   "execution_count": 19,
+   "id": "8222c5ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "# I can also give an alias when I use \"from .. import\"\n",
     "\n",
-    "from random import randint as ri   "
+    "from random import randint as ri     # (1) load random, (2) define ri = random.randint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02c2c317",
+   "metadata": {},
+   "source": [
+    "# Four ways to `import`:\n",
+    "\n",
+    "1. `import MODNAME`\n",
+    "2. `import MODNAME as MODALIAS`\n",
+    "3. `from MODNAME import FUNCNAME`\n",
+    "4. `from MODNAME import FUNCNAME as FUNCALIAS`\n",
+    "\n",
+    "There is a fifth way!  We can say\n",
+    "\n",
+    "`from MODNAME import *`\n",
+    "\n",
+    "PLEASE PLEASE PLEASE **PLEASE** never use this!  Why not?\n",
+    "\n",
+    "1. From a theoretical and aesthetic perspective, this means taking all of the names defined in the module, and assigning them to global variable"
    ]
   }
  ],
