--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4ad92cc0",
+   "id": "a86f9923",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b4d4c8c2",
+   "id": "19a7b1bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b1187d7",
+   "id": "3e1f13a3",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed4a98af",
+   "id": "9cfe9339",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5b99380c",
+   "id": "40877cf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "beee5f30",
+   "id": "e010b289",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2cf516dc",
+   "id": "04bee4a4",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0dff8cb",
+   "id": "28e94030",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24cf2148",
+   "id": "492b52b2",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "310f8113",
+   "id": "79b1d5e1",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "82f770f3",
+   "id": "2076164a",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c737a09",
+   "id": "2e854124",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bdb30452",
+   "id": "e847ad99",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9fe639ad",
+   "id": "ed835409",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de8f552",
+   "id": "e7663999",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "940ea7dc",
+   "id": "ba7e1c7c",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c6a1f169",
+   "id": "b929dea2",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "84852215",
+   "id": "efca47b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ebc885a0",
+   "id": "9bb03a2b",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40b367f8",
+   "id": "e67f91c2",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5504e02e",
+   "id": "8de05172",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bf5ffc88",
+   "id": "d6488cbc",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8cddb91d",
+   "id": "be6912b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a2749e",
+   "id": "a710118b",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd08fba1",
+   "id": "2b67cd1b",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -528,8 +528,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "6900a651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e71a9265",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mini-access-log.txt',\n",
+       " 'nums.txt',\n",
+       " 'shoe-data.txt',\n",
+       " 'linux-etc-passwd.txt',\n",
+       " 'wcfile.txt',\n",
+       " 'myfile.txt']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# module \"glob\", function \"glob\"\n",
+    "\n",
+    "glob.glob('*.txt')    # I pass the function a string with a pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1419fe66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Python first steps, day 5 -- 2022-12Dec-19.ipynb',\n",
+       " 'Python first steps, day 1 -- 2022-11Nov-21.ipynb',\n",
+       " 'Python first steps, day 3 -- 2022-12Dec-05.ipynb',\n",
+       " 'Python first steps, day 2 -- 2022-11Nov-28.ipynb',\n",
+       " 'Python first steps, day 4 -- 2022-12Dec-12.ipynb']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('*.ipynb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b3db7e29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mini-access-log.txt',\n",
+       " 'nums.txt',\n",
+       " 'shoe-data.txt',\n",
+       " 'linux-etc-passwd.txt',\n",
+       " 'wcfile.txt',\n",
+       " 'myfile.txt']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('*x*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6c829751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a pattern: /etc/*.conf\n",
+      "/etc/syslog.conf\n",
+      "/etc/kern_loader.conf\n",
+      "/etc/rtadvd.conf\n",
+      "/etc/pf.conf\n",
+      "/etc/launchd.conf\n",
+      "/etc/autofs.conf\n",
+      "/etc/slpsa.conf\n",
+      "/etc/ntp_opendirectory.conf\n",
+      "/etc/resolv.conf\n",
+      "/etc/nfs.conf\n",
+      "/etc/asl.conf\n",
+      "/etc/ntp.conf\n",
+      "/etc/AFP.conf\n",
+      "/etc/man.conf\n",
+      "/etc/newsyslog.conf\n",
+      "/etc/notify.conf\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = input('Enter a pattern: ').strip()\n",
+    "\n",
+    "for one_filename in glob.glob(pattern):\n",
+    "    print(one_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4698d0b5",
+   "id": "49bf7410",
    "metadata": {},
    "outputs": [],
    "source": []
